# twiddle

./: .env.example  .gitignore  README.md  SETUP.md  STARTUP.md  TODO.txt  docker-compose.yml  foo.sh  notes.txt  package.json  pnpm-lock.yaml  test_edges.js  test_validate.ts  test_validator.js  test_validator_mock.js  tsconfig.base.json  typecheck_output.txt
DSL/: README.md
DSL/tests/: test_decorators.py
DSL/twiddle_dsl/: activity.py  workflow.py
DSL/twiddle_dsl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
SDK/: README.md  pyproject.toml
SDK/airflow_output/: dag.py
SDK/airflow_output/tasks/: __init__.py
SDK/tests/: test_cli.py
SDK/twiddle_sdk.egg-info/: PKG-INFO  SOURCES.txt
SDK/twiddle_sdk/cli/: convert.py  lint.py  main.py
SDK/twiddle_sdk/converter/: airflow_generator.py
SDK/twiddle_sdk/introspection/: __init__.py  discovery.py  validator.py
docker/: .env.example  .gitignore  README.md  docker-compose.yml
docker/airflow/config/: .gitkeep
docker/airflow/dags/: example_dag.py
docker/airflow/plugins/: .gitkeep
docker/postgres/: init-databases.sh
docker/temporal/dynamicconfig/: development-sql.yaml
dsl/: README.md  pyproject.toml
dsl/twiddle_dsl/: __init__.py  activity.py  logging.py  parameter.py  types.py  workflow.py
dsl/twiddle_dsl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sdk/: README.md
sdk/airflow_output/: README.md  requirements.txt
sdk/airflow_output/tasks/: task.py
sdk/tests/: test_airflow.py  test_converter.py  test_introspection.py
sdk/twiddle_sdk/: __init__.py
sdk/twiddle_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sdk/twiddle_sdk/cli/: init.py  lint.py  main.py
sdk/twiddle_sdk/converter/: __init__.py  extractor.py  generator.py
sdk/twiddle_sdk/introspection/: reporter.py  validator.py
temporal-config/: development-sql.yaml
utilities/: README.md  reset_password.py
