[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twiddle-dsl"
dynamic = ["version"]
description = "Twiddle DSL - Decorators and types for Temporal workflow development"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [{name = "Twiddle Team"}]
keywords = ["temporal", "workflow", "dsl", "twiddle"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
temporal = [
    "temporalio>=1.4.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/twiddle/twiddle-sdk"
Documentation = "https://github.com/twiddle/twiddle-sdk#readme"
Repository = "https://github.com/twiddle/twiddle-sdk"

[tool.setuptools.dynamic]
version = {attr = "twiddle_dsl.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["twiddle_dsl*"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
